# church-presenter

./: .gitignore  AGENTS.md  Directory.Build.props  README.md  package.json  skills-lock.json  vite.config.ts
.cursor/: hooks.json  mcp.json
.cursor/hooks/: windows-app-org-edit-tracker.ps1  windows-app-org-stop.ps1
.cursor/rules/: microsoft-learn-docs.mdc  windows-build-verification.mdc
apps/windows/: README.md
docs/: README.md
docs/architecture/: README.md  backend-application.md  content-management.md  file-access-and-cache-resilience.md  native-hosts.md  quick-edit-text-layer-materialization.md  rendering-engine-replacement.md  target-architecture.md
legacy/tauri/: package.json  vite.config.ts
legacy/tauri_old/: index.html  package.json  vite.config.ts
scripts/: verify-dotnet-format.ps1
shared/assets/: README.md
shared/contracts/: README.md  cpres-v1-outline.md
shared/design/: README.md
shared/test-fixtures/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  cpres.rs  lib.rs  main.rs
src/components/: AppPageTabs.tsx
src/hooks/: index.ts  use-auto-save.ts  use-system-fonts.ts
src/lib/: tauri-api.ts
src/output/: OutputApp.tsx
src/pages/: EditPage.tsx  ReflowPage.tsx  ShowPage.tsx
tests/ChurchPresenter.App.Tests/: ChurchPresenter.App.Tests.csproj  GlobalUsings.cs
tests/ChurchPresenter.Core.Tests/: ChurchPresenter.Core.Tests.csproj  CpresFixtureZipTests.cs  CpresRoundTripTests.cs
tests/ChurchPresenter.Rendering.Benchmarks/: SlideSceneCompilerBenchmarks.cs  (+1 more)
(+564 files in other folders)
