[package]
name = "church-presenter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "church_presenter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["fs"] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-persisted-scope = "2"
windows = { version = "0.62.2", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

